force-app/main/default/objects/Takeoff__c/Takeoff__c.object-meta.xml
<CustomObject>
    <label>Takeoff</label>
    <nameField>
        <displayFormat>TKO-{YYYY}-{0000}</displayFormat>
        <label>Takeoff Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Takeoffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>