force-app/main/default/objects/Takeoff__c/fields/Builder_Division__c.field-meta.xml
<CustomField>
    <fullName>Builder_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Division</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Takeoffs</relationshipLabel>
    <relationshipName>Takeoffs_By_Division</relationshipName>
    <type>Lookup</type>
</CustomField>