force-app/main/default/objects/Takeoff__c/fields/Community_Package__c.field-meta.xml
<CustomField>
    <fullName>Community_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Effective Community Package at time of Takeoff. Drives scope verification and Work Order line creation.</description>
    <label>Community Package</label>
    <referenceTo>Community_Package__c</referenceTo>
    <relationshipLabel>Takeoffs</relationshipLabel>
    <relationshipName>Takeoffs_By_Package</relationshipName>
    <type>Lookup</type>
</CustomField>