force-app/main/default/objects/Takeoff__c/fields/CS_Approved__c.field-meta.xml
<CustomField>
    <fullName>CS_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Success has reviewed and approved the Takeoff. Setting this triggers Work Order creation flow.</description>
    <label>CS Approved</label>
    <type>Checkbox</type>
</CustomField>