force-app/main/default/objects/Takeoff__c/fields/Eight11_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Eight11_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>811 Confirmed</label>
    <type>Checkbox</type>
</CustomField>