force-app/main/default/objects/Takeoff__c/fields/Field_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Field_Complete_Date__c</fullName>
    <description>Timestamp when the Field Manager marked the Takeoff field review complete. Routes to CS for review.</description>
    <label>Field Complete Date</label>
    <type>DateTime</type>
</CustomField>