force-app/main/default/objects/Takeoff__c/fields/FM_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FM_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Takeoffs (FM)</relationshipLabel>
    <relationshipName>FM_Takeoffs</relationshipName>
    <type>Lookup</type>
</CustomField>