force-app/main/default/objects/Takeoff__c/fields/Geotag_Lat__c.field-meta.xml
<CustomField>
    <fullName>Geotag_Lat__c</fullName>
    <label>Geotag Lat</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>