force-app/main/default/objects/Takeoff__c/fields/Irrigation_Zones__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_Zones__c</fullName>
    <label>Irrigation Zones</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>