force-app/main/default/objects/Takeoff__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Takeoffs</relationshipLabel>
    <relationshipName>Takeoffs</relationshipName>
    <type>Lookup</type>
</CustomField>