force-app/main/default/objects/Takeoff__c/fields/Mismatch_Found__c.field-meta.xml
<CustomField>
    <fullName>Mismatch_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when field measurements or scope do not match the Builder PO or Community Package.</description>
    <label>Mismatch Found</label>
    <type>Checkbox</type>
</CustomField>