force-app/main/default/objects/Takeoff__c/fields/Mismatch_Notes__c.field-meta.xml
<CustomField>
    <fullName>Mismatch_Notes__c</fullName>
    <description>Details of any variance between PO, Community Package, and field measurements.</description>
    <label>Mismatch Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>