force-app/main/default/objects/Takeoff__c/fields/Mulch_Measured_CY__c.field-meta.xml
<CustomField>
    <fullName>Mulch_Measured_CY__c</fullName>
    <label>Mulch Measured CY</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>