force-app/main/default/objects/Takeoff__c/fields/NFI_Count__c.field-meta.xml
<CustomField>
    <fullName>NFI_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NFI Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>