force-app/main/default/objects/Takeoff__c/fields/Photos_Count__c.field-meta.xml
<CustomField>
    <fullName>Photos_Count__c</fullName>
    <label>Photos Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>