force-app/main/default/objects/Takeoff__c/fields/Plants_Count__c.field-meta.xml
<CustomField>
    <fullName>Plants_Count__c</fullName>
    <label>Plants Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>