force-app/main/default/objects/Takeoff__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Takeoffs</relationshipLabel>
    <relationshipName>Takeoffs</relationshipName>
    <type>Lookup</type>
</CustomField>