force-app/main/default/objects/Takeoff__c/fields/Sod_Measured_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Sod_Measured_Sqft__c</fullName>
    <label>Sod Measured Sqft</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>