force-app/main/default/objects/Takeoff__c/fields/Source_Order__c.field-meta.xml
<CustomField>
    <fullName>Source_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Standard Order header created from the source PO content for this takeoff.</description>
    <label>Source Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Takeoffs</relationshipLabel>
    <relationshipName>SourceOrderTakeoffs</relationshipName>
    <type>Lookup</type>
</CustomField>