force-app/main/default/objects/Takeoff__c/fields/Standard_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Standard_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Standard Field Service Work Order created from this takeoff. Replaces the legacy custom Work_Order__c lookup.</description>
    <label>Standard Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Takeoffs</relationshipLabel>
    <relationshipName>Takeoffs_Standard_Work_Order</relationshipName>
    <type>Lookup</type>
</CustomField>