force-app/main/default/objects/Takeoff__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Work Order created when this Takeoff reaches CS Approved status. Set automatically by LOVING_Takeoff_Approved flow. Read-only for field ops.</description>
    <label>Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Takeoffs</relationshipLabel>
    <relationshipName>Takeoffs</relationshipName>
    <type>Lookup</type>
</CustomField>