force-app/main/default/objects/Takeoff__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <description>Zone inherited from Lot → Community. Mirrors Community__c.Zone__c for dispatch routing.</description>
    <formula>TEXT(Lot__r.Community__r.Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>